kubernetes/service-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: pos-reporting
  namespace: pos-reporting
spec:
  selector:
    app: pos-reporting
  ports:
    - port: 80
      targetPort: 5000
      protocol: TCP
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pos-reporting
  namespace: pos-reporting
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: pos-reporting.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pos-reporting
                port:
                  number: 80
